--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/418381/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 14 Apr 2023 09:38:58 UTC
+update_date: Sun, 16 Apr 2023 17:33:15 UTC
 stages:
 - id: 703
   step: 11079
@@ -22,7 +22,7 @@ stages:
   is_completed: true
 - id: 708
   step: 11084
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Write, compile, and run
