--- a/Guess the Animal/Ĉu ĝi estas la kato?/task-info.yaml
+++ b/Guess the Animal/Ĉu ĝi estas la kato?/task-info.yaml
@@ -2135,6 +2135,9 @@ files:
         }
     }
   learner_created: true
+- name: src/animals/core/GuessingGame.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/11084#comment
 status: Solved
 feedback:
